WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222020
REGRESSION(
r272776
) [GLIB] imported/w3c/web-platform-tests/html/canvas/element/fill-and-stroke-styles/2d.pattern.image.broken.html is failing for a different reason
https://bugs.webkit.org/show_bug.cgi?id=222020
Summary
REGRESSION(r272776) [GLIB] imported/w3c/web-platform-tests/html/canvas/elemen...
Lauro Moura
Reported
2021-02-16 19:49:12 PST
imported/w3c/web-platform-tests/html/canvas/element/fill-and-stroke-styles/2d.pattern.image.broken.html This test checks if ctx.createPattern(brokenImage, ...) returns null with a broken image[1]. While the current baseline expects FAIL,
r272776
changed the reason it's failing in GTK/WPE. Diff: -FAIL Canvas test: 2d.pattern.image.broken assert_equals: ctx.createPattern(img, 'repeat') === null (got [object CanvasPattern][object], expected [object]) expected null but got object "[object CanvasPattern]" +FAIL Canvas test: 2d.pattern.image.broken The object is in an invalid state. The invalid state is raised after failing to create the native image in CanvasRenderingContext2DBase::createPattern(HTMLImageElement...). Meanwhile, the same revision made imported/w3c/web-platform-tests/html/canvas/element/fill-and-stroke-styles/2d.pattern.image.nonexistent.html pass in WPE, as now InvalidState is thrown. [1]
https://html.spec.whatwg.org/multipage/canvas.html#dom-context-2d-createpattern
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-02-23 19:50:15 PST
<
rdar://problem/74675235
>
Rob Buis
Comment 2
2024-12-14 08:53:03 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37969
EWS
Comment 3
2024-12-19 11:28:16 PST
Committed
288110@main
(7702ba882df2): <
https://commits.webkit.org/288110@main
> Reviewed commits have been landed. Closing PR #37969 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug