REGRESSION(r272776) [GLIB] imported/w3c/web-platform-tests/html/canvas/element/fill-and-stroke-styles/2d.pattern.image.broken.html is failing for a different reason https://bugs.webkit.org/show_bug.cgi?id=222020

Reviewed by Carlos Garcia Campos.

Throw an exception if the html image element had an error loading its source [1].

[1] https://html.spec.whatwg.org/multipage/canvas.html#dom-context-2d-createpattern-dev

* LayoutTests/imported/w3c/web-platform-tests/html/canvas/element/fill-and-stroke-styles/2d.pattern.image.nonexistent-expected.txt:
* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/html/canvas/element/fill-and-stroke-styles/2d.pattern.image.broken-expected.txt:
* Source/WebCore/html/canvas/CanvasRenderingContext2DBase.cpp:
(WebCore::CanvasRenderingContext2DBase::createPattern):

Canonical link: https://commits.webkit.org/288110@main